Fixing the test SearchServiceMain class.